Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33669

mariabackup --backup hangs

    XMLWordPrintable

Details

    Description

      New bad effect observed on 10.6 development trees.
      origin/10.6-MDEV-33588 a4389ec605fe2d027ec09850fb736078c250ce3a 2024-03-11T17:06:05+02:00
      origin/10.6-MDEV-29445 84aeca81340231a01503020f15cc315ab96a9f1d 2024-03-11T17:07:46+02:00
      Per Marko the problem should be in non development trees too.

      Scenario:
      1. Start the DB Server and generate some initial data.
      2. Several connections run some DDL/DML mix concurrent.
      3. During 2. is ongoing it is tried to make a backup of the server started in 1.

      There are cases where the mariabackup --backup seems to hang.

      The output of mariabackup looks than like
       [rr 1184693 8399][00] 2024-03-13 06:19:02 Acquiring BACKUP LOCKS...
       [rr 1184693 18924]2024-03-13  6:19:10 0 [Note] InnoDB: Read redo log up to LSN=10555392
      ...
      [rr 1184693 242736]2024-03-13  6:22:10 0 [Note] InnoDB: Read redo log up to LSN=10555392
      

      sdp:/data1/results/1710335849/Backup_hang$ _RR_TRACE_DIR=./1_clone/rr rr replay --mark-stdio

      Why is there no progress of the backup operation like finish the backup or entries
      with higher LSN within the timespan between 6:19:10 and 6:22:10?

      RQG
      ===
      # git clone https://github.com/mleich1/rqg --branch <pick the right branch> RQG
      #
      # GIT_SHOW: HEAD -> master 26bcf9cae09ec7d53ae8d2c378235f349fb1accd 2023-12-01T16:27:59+01:00
      # rqg.pl  : Version 4.5.0 (2023-12)
      #
      # $RQG_HOME/rqg.pl \
      # --grammar=conf/mariadb/partitions_innodb.yy \
      # --gendata-advanced \
      # --skip-gendata \
      # --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
      # --mysqld=--loose-idle_write_transaction_timeout=0 \
      # --mysqld=--loose-idle_transaction_timeout=0 \
      # --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      # --mysqld=--connect_timeout=60 \
      # --mysqld=--interactive_timeout=28800 \
      # --mysqld=--slave_net_timeout=60 \
      # --mysqld=--net_read_timeout=30 \
      # --mysqld=--net_write_timeout=60 \
      # --mysqld=--loose-table_lock_wait_timeout=50 \
      # --mysqld=--wait_timeout=28800 \
      # --no_mask \
      # --queries=10000000 \
      # --seed=random \
      # --reporters=None \
      # --reporters=ErrorLog \
      # --reporters=Deadlock \
      # --validators=None \
      # --mysqld=--log_output=none \
      # --mysqld=--log_bin_trust_function_creators=1 \
      # --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      # --engine=InnoDB \
      # --restart_timeout=360 \
      # --mysqld=--plugin-load-add=file_key_management.so \
      # --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
      # --mysqld=--plugin-load-add=provider_lzo.so \
      # --mysqld=--plugin-load-add=provider_bzip2.so \
      # --mysqld=--plugin-load-add=provider_lzma.so \
      # --mysqld=--plugin-load-add=provider_snappy.so \
      # --mysqld=--plugin-load-add=provider_lz4.so \
      # --mysqld=--loose-innodb_compression_level=1 \
      # --duration=300 \
      # --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
      # --mysqld=--lock-wait-timeout=86400 \
      # --mysqld=--innodb-lock-wait-timeout=50 \
      # --mysqld=--innodb-lock-wait-timeout=50 \
      # --mysqld=--loose-innodb_fast_shutdown=1 \
      # --mysqld=--sql_mode=traditional \
      # --mysqld=--loose-innodb_read_only_compressed=OFF \
      # --reporters=Mariabackup_linux \
      # --duration=300 \
      # --mysqld=--loose-innodb-log-file-size=200M \
      # --mysqld=--loose-innodb-sync-debug \
      # --mysqld=--innodb_stats_persistent=off \
      # --mysqld=--innodb_adaptive_hash_index=off \
      # --mysqld=--innodb_sort_buffer_size=65536 \
      # --mysqld=--innodb_random_read_ahead=OFF \
      # --mysqld=--loose-innodb_evict_tables_on_commit_debug=on \
      # --mysqld=--loose-max-statement-time=30 \
      # --threads=33 \
      # --mysqld=--innodb-use-native-aio=0 \
      # --mysqld=--loose-gdb \
      # --mysqld=--loose-debug-gdb \
      # --rr=Extended \
      # --rr_options=--wait \
      # --mysqld=--innodb_undo_log_truncate=OFF \
      # --mysqld=--loose_innodb_change_buffering=all \
      # --mysqld=--innodb_undo_tablespaces=3 \
      # --mysqld=--innodb_rollback_on_timeout=OFF \
      # --mysqld=--innodb_page_size=64K \
      # --mysqld=--innodb-buffer-pool-size=24M \
      # --vardir_type=slow \
      # --no_mask \
      # <local settings>
      

      Attachments

        Issue Links

          Activity

            People

              debarun Debarun Banerjee (Inactive)
              mleich Matthias Leich
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6h 10m
                  6h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.